--- a/musicly/Views/Shared/_Layout.cshtml
+++ b/musicly/Views/Shared/_Layout.cshtml
@@ -32,6 +32,8 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Users" asp-action="Index">Users</a></li>
+                    <li><a asp-area="" asp-controller="Instruments" asp-action="Index">Instruments</a></li>
+                    <li><a asp-area="" asp-controller="InstrumentTypes" asp-action="Index">Instrument Types</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
