--- a/musicly/Views/Instruments/Index.cshtml
+++ b/musicly/Views/Instruments/Index.cshtml
@@ -9,6 +9,9 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<form asp-controller="Instruments" asp-action="Index" method="get">
+    <input name="searchString" type="text" placeholder="instrument name here"/>
+</form>
 <table class="table">
     <thead>
         <tr>
