--- a/musicly/Views/Shared/_Layout.cshtml
+++ b/musicly/Views/Shared/_Layout.cshtml
@@ -1,10 +1,16 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - musicly</title>
-
+    
+    <script>
+        var isFiltered = '@HttpContextAccessor.HttpContext.Session.GetString("isFiltered")';
+        alert(isFiltered);
+    </script>
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
@@ -34,6 +40,22 @@
                     <li><a asp-area="" asp-controller="Users" asp-action="Index">Users</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    @*@if ((bool?)HttpContext.Session.["User"])
+                    {
+                        <li>Welcome, @Session["UserFullName"]</li>
+                        <li class="logout">@Html.ActionLink("Logout", "Logout", "Login")</li>
+                    }
+                    else if ((bool?)Session["Admin"])
+                    {
+                        <li>Welcome, Admin</li>
+                        <li class="logout">@Html.ActionLink("Logout", "Logout", "Login")</li>
+                    }
+                    else
+                    {
+                        <li>@Html.ActionLink("Register", "Index", "Register")</li>
+                        <li>@Html.ActionLink("Login", "Index", "Login")</li>
+                    }*@
+                    <li><a asp-area="" asp-controller="Register" asp-action="Index">Register</a></li>
                 </ul>
             </div>
         </div>
