--- a/musicly/Views/InstrumentOrders/Index.cshtml
+++ b/musicly/Views/InstrumentOrders/Index.cshtml
@@ -9,6 +9,9 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<form asp-controller="InstrumentOrders" asp-action="Index" method="get">
+    <input name="searchId" type="text" placeholder="order id here" />
+</form>
 <table class="table">
     <thead>
         <tr>
