--- a/musicly/Views/Home/About.cshtml
+++ b/musicly/Views/Home/About.cshtml
@@ -5,3 +5,87 @@
 <h3>@ViewData["Message"]</h3>
 
 <p>Use this area to provide additional information.</p>
+
+
+<div id="about" class="container">
+    <div id="fb-root"></div>
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <script>
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2&appId=2210055362615403&autoLogAppEvents=1';
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+        var data = [1, 2, 3, 4];
+        var w = 500;
+        var h = 100;
+
+        var svg = d3.select("#barChart")
+            .attr("width", w)
+            .attr("height", h);
+
+        svg.selectAll("rect")
+            .data(data)
+            .enter()
+            .append("rect")
+            .attr("x", function (d, i) {
+                return i * 21;  //Bar width of 20 plus 1 for padding
+            })
+            .attr("y", function (d) {
+                return h - d;  //Height minus data value
+            })
+            .attr("width", 20)
+            .attr("height", function (d) {
+                return d;  //Just the data value
+            })
+            .attr("fill", function (d) {
+                return "rgb(0, 0, " + (d * 3) + ")";
+            });
+    </script>
+
+    <pre class="about-pre">we invite you to stop your life for a couple
+ of minutes and enjoy from a fresh smoothie
+ or fresh juice.
+All of our fruits are fresh and high quality.
+Sabras exists 5 years and always tries to
+give the best service to our customers.
+All of our fruits grow in Israel
+(because we are sabras).
+We located at Through Ramatayim 67,
+Hod Hasharon,
+Please visit our facebook page.<a href="https://www.facebook.com/Sabrasme" class="fa fa-facebook" target="_blank"></a>
+                               
+<div class="fb-share-button" data-href="https://www.facebook.com/Sabrasme" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2FSabrasme&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+<svg id="barChart"></svg>
+</pre>
+
+    <div id="map" style="height:800px;"></div>
+    <script>
+       
+        function myMap() {
+            var locations;
+            $.get("https://localhost:44304/Stores", function (data) {
+                locations = data;
+                var uluru = { lat: 31.957122, lng: 34.970975 };
+                console.log(locations)
+                // The map, centered at Uluru
+                var map = new google.maps.Map(
+                    document.getElementById('map'), { zoom: 12, center: uluru });
+                // The marker, positioned at Uluru
+                $.each(data , function (i, item) {
+                    let location = { lat: item.lat, lng: item.lng };
+                    var marker = new google.maps.Marker({ position: location, map: map });
+                });
+            });
+           
+
+        }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByfBxIl9_Kz12_97dMtFdVDlbn7zk7dts&callback=myMap"></script>
+
+</div>
+
