--- a/musicly/Views/Home/About.cshtml
+++ b/musicly/Views/Home/About.cshtml
@@ -47,7 +47,7 @@
             });
     </script>
 
-    <pre class="about-pre">we invite you to stop your life for a couple
+we invite you to stop your life for a couple
  of minutes and enjoy from a fresh smoothie
  or fresh juice.
 All of our fruits are fresh and high quality.
@@ -57,11 +57,10 @@ All of our fruits grow in Israel
 (because we are sabras).
 We located at Through Ramatayim 67,
 Hod Hasharon,
-Please visit our facebook page.<a href="https://www.facebook.com/Sabrasme" class="fa fa-facebook" target="_blank"></a>
+Please visit our facebook page.<a href="https://www.facebook.com/musiclyofficial" class="fa fa-facebook" target="_blank"></a>
                                
-<div class="fb-share-button" data-href="https://www.facebook.com/Sabrasme" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2FSabrasme&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+<div class="fb-share-button" data-href="https://www.facebook.com/musiclyofficial" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2FSabrasme&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
 <svg id="barChart"></svg>
-</pre>
 
     <div id="map" style="height:800px;"></div>
     <script>
