--- a/musicly/Views/Home/About.cshtml
+++ b/musicly/Views/Home/About.cshtml
@@ -1,8 +1,22 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
+<style>
+    #canvas-wrap {
+        position: relative;
+    }
+
+    #canvas-wrap canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 2;
+    }
+</style>
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
+
 
 <p>Use this area to provide additional information.</p>
 
@@ -47,24 +61,43 @@
             });
     </script>
 
-we invite you to stop your life for a couple
- of minutes and enjoy from a fresh smoothie
- or fresh juice.
-All of our fruits are fresh and high quality.
-Sabras exists 5 years and always tries to
-give the best service to our customers.
-All of our fruits grow in Israel
-(because we are sabras).
-We located at Through Ramatayim 67,
-Hod Hasharon,
-Please visit our facebook page.<a href="https://www.facebook.com/musiclyofficial" class="fa fa-facebook" target="_blank"></a>
-                               
-<div class="fb-share-button" data-href="https://www.facebook.com/musiclyofficial" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2FSabrasme&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
-<svg id="barChart"></svg>
+    we invite you to stop your life for a couple
+    of minutes and enjoy from a fresh smoothie
+    or fresh juice.
+    All of our fruits are fresh and high quality.
+    Sabras exists 5 years and always tries to
+    give the best service to our customers.
+    All of our fruits grow in Israel
+    (because we are sabras).
+    We located at Through Ramatayim 67,
+    Hod Hasharon,
+    Please visit our facebook page.<a href="https://www.facebook.com/musiclyofficial" class="fa fa-facebook" target="_blank"></a>
 
-    <div id="map" style="height:800px;"></div>
+    <div class="fb-share-button" data-href="https://www.facebook.com/musiclyofficial" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2FSabrasme&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+    <svg id="barChart"></svg>
+
+
+
+
+    <div id="canvas-wrap">
+        <canvas id="myCanvas" height="800">
+        </canvas>
+        <div id="map" style="height:800px;">
+        </div>
+    </div>
+   
+
+
+
     <script>
-       
+        //draw circle
+        var c = document.getElementById("myCanvas");
+        var ctx = c.getContext("2d");
+        ctx.beginPath();
+        ctx.arc(145, 98, 55, 0, 25 * Math.PI);
+        ctx.stroke();
+
+        //initialize map
         function myMap() {
             var locations;
             $.get("https://localhost:44304/Stores", function (data) {
@@ -73,14 +106,18 @@ Please visit our facebook page.<a href="https://www.facebook.com/musiclyofficial
                 console.log(locations)
                 // The map, centered at Uluru
                 var map = new google.maps.Map(
-                    document.getElementById('map'), { zoom: 12, center: uluru });
+                    document.getElementById('map'), { zoom: 11, center: uluru });
                 // The marker, positioned at Uluru
-                $.each(data , function (i, item) {
+                $.each(data, function (i, item) {
                     let location = { lat: item.lat, lng: item.lng };
                     var marker = new google.maps.Marker({ position: location, map: map });
                 });
             });
-           
+
+
+            $("#myCanvas").click(function () {
+                $("#myCanvas").hide();
+            });
 
         }
     </script>
