--- a/musicly/Views/Shared/_Layout.cshtml
+++ b/musicly/Views/Shared/_Layout.cshtml
@@ -1,16 +1,11 @@
 ﻿@using Microsoft.AspNetCore.Http
-@inject IHttpContextAccessor HttpContextAccessor
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - musicly</title>
-    
-    <script>
-        var isFiltered = '@HttpContextAccessor.HttpContext.Session.GetString("isFiltered")';
-        alert(isFiltered);
-    </script>
+
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
@@ -37,28 +32,26 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Users" asp-action="Index">Users</a></li>
-                    <li><a asp-area="" asp-controller="Instruments" asp-action="Index">Instruments</a></li>
-                    <li><a asp-area="" asp-controller="InstrumentTypes" asp-action="Index">Instrument Types</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    @*@if ((bool?)HttpContext.Session.["User"])
+
+                    @if (Context.Session.GetString("UserName") != null)
                     {
-                        <li>Welcome, @Session["UserFullName"]</li>
+                        <li><a asp-area="" asp-controller="Instruments" asp-action="Index">Instruments</a></li>
                         <li class="logout">@Html.ActionLink("Logout", "Logout", "Login")</li>
                     }
-                    else if ((bool?)Session["Admin"])
+                    else if (Context.Session.GetInt32("Admin") == 1)
                     {
-                        <li>Welcome, Admin</li>
+                        <li><a asp-area="" asp-controller="Users" asp-action="Index">Users</a></li>
+                        <li><a asp-area="" asp-controller="InstrumentTypes" asp-action="Index">Instrument Types</a></li>
+                        <li><a asp-area="" asp-controller="InstrumentOrders" asp-action="Index">Orders</a></li>
                         <li class="logout">@Html.ActionLink("Logout", "Logout", "Login")</li>
                     }
                     else
                     {
                         <li>@Html.ActionLink("Register", "Index", "Register")</li>
                         <li>@Html.ActionLink("Login", "Index", "Login")</li>
-                    }*@
-                    <li><a asp-area="" asp-controller="Register" asp-action="Index">Register</a></li>
-                    <li><a asp-area="" asp-controller="InstrumentOrders" asp-action="Index">Orders</a></li>
+                    }
                 </ul>
             </div>
         </div>
@@ -66,13 +59,20 @@
 
     <partial name="_CookieConsentPartial" />
 
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2020 - musicly</p>
-        </footer>
-    </div>
+<div class="container body-content">
+    <br/>
+    @if (Context.Session.GetString("UserName") != null &&
+         Context.Session.GetString("FirstName") != null)
+    {
+        <h1 class="display-4">Welcome, @Context.Session.GetString("FirstName")</h1>
+    }
+
+    @RenderBody()
+    <hr/>
+    <footer>
+        <p>&copy; 2020 - musicly</p>
+    </footer>
+</div>
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
