--- a/musicly/Views/Login/Login.cshtml
+++ b/musicly/Views/Login/Login.cshtml
@@ -1,15 +1,15 @@
-﻿@ViewBag
-@{
-    ViewBag.Message = "";
-    ViewData["Title"] = "Login";
+﻿@{
+    ViewData["Title"] = "Index";
 }
 
-<h2>Login - no!!</h2>
+<h2>Login</h2>
 <div class="container login">
     <div class="intro">
         <h2>Hello</h2>
         <h4>Sign in to Musicly or <a href="/Register">create an account</a></h4>
     </div>
+
+    <h4 class="invalid-login">@ViewBag.Message</h4>
 
     <form action="/Login/Login" method="post" class="login-details">
         <div class="input-group input-group-lg">
@@ -19,13 +19,8 @@
             Enter your password<input type="password" name="password" placeholder="Password" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
         </div>
         <div class="input-group input-group-lg">
-            @if (ViewBag.Message != "" && ViewBag.Message != null)
-            {
-            <h4 class="invalid-login">@ViewBag.Message</h4>
-            }
+
             <input type="submit" name="submit" value="Login" class="form-control login-button" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
         </div>
     </form>
 </div>
-
-
