cart view and manage

--- a/musicly/Views/Shared/_Layout.cshtml
+++ b/musicly/Views/Shared/_Layout.cshtml
@@ -35,9 +35,10 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
 
                     @if (Context.Session.GetString("UserName") != null &&
-                         Context.Session.GetInt32("Admin") != 1)
+                       Context.Session.GetInt32("Admin") != 1)
                     {
                         <li><a asp-area="" asp-controller="Instruments" asp-action="InstrumentsList">Instruments</a></li>
+                        <li><a asp-area="" asp-controller="InstrumentOrdersController" asp-action="Cart">My Cart</a></li>
                         <li class="logout">@Html.ActionLink("Logout", "Logout", "Login")</li>
                     }
                     @if (Context.Session.GetInt32("Admin") == 1)
