--- a/musicly/Views/Instruments/InstrumentsList.cshtml
+++ b/musicly/Views/Instruments/InstrumentsList.cshtml
@@ -1,16 +1,17 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+<!DOCTYPE html>
 <html>
 <style>
     .container {
-        position:relative;
-        left:0;
+        position: relative;
+        left: 0;
         right: 0;
         width: 100%;
-        max-width:100% !important;
+        max-width: 100% !important;
     }
 
     .row {
-        margin-right:15px;
+        margin-right: 15px;
         margin-left: 15px;
     }
 
@@ -19,45 +20,55 @@
         width: 100%;
     }*/
     .instrumentCard {
-        height:400px;
-        text-align:center;
+        height: 400px;
+        text-align: center;
         border: 1px solid black;
         width: 24%;
         margin-right: 1%;
         margin-bottom: 1%;
     }
+
     .filters {
-        background-color:blue;
+        background-color: blue;
     }
 
     .instrumentImage {
         max-width: 100%;
-        margin-top:5px;
-        max-height:70%;
-        min-height:70%;
+        margin-top: 5px;
+        max-height: 70%;
+        min-height: 70%;
     }
 
     .instrumentName {
         margin-top: -30px;
-        font-size:35px;
+        font-size: 35px;
     }
+
     .instrumentDescription {
-        font-size:25px;
+        font-size: 25px;
         margin-top: -3px;
     }
+
     .instrumentPrice {
-        font-size:30px;
+        font-size: 30px;
         margin-top: 5px;
     }
 
     .instrumentPrice::after {
-        content:"₪";
+        content: "₪";
+    }
+
+    .addToCartBtn {
+        /*float: left;*/
+        position: absolute;
+        bottom: 2%;
+        left: 5%;
     }
 </style>
 <head>
     <meta charset="utf-8" />
     <title></title>
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -98,19 +109,23 @@
                                         <input over="2000" under="99999999" type="checkbox" class="checkbox" role="checkbox" onclick="">2000 ומעלה
                                     </label>
                                 </li>
-                            </ul><input type="hidden" id="72709_F15621" value="0">
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>      
+    </div>
 
     <script>
         $(document).ready(async () => {
+            if (sessionStorage.cart == undefined) {
+                sessionStorage.cart = JSON.stringify([]);
+            }
             var allInstruments = await getAllInstruments();
             createInstruments(allInstruments);
             var filters = [];
+
             $('input').on('click', (event) => {
                 var target = event.target;
                 var over = target.getAttribute('over');
@@ -127,15 +142,32 @@
                     createInstruments(filterInstruments(allInstruments, filters))
                 }
             })
+
+            $('.addToCartBtn').on('click', (event) => {
+                var target = event.target;
+                var instrumentId = target.getAttribute('instrumentId');
+                var cart = JSON.parse(sessionStorage.cart);
+                var exists = 0;
+                for (cartItem of cart) {
+                    if (cartItem.id == instrumentId) {
+                        cartItem.quantity++;
+                        exists++;
+                    }
+                }
+                if (!exists) {
+                    cart.push({ id: instrumentId, quantity: 1 })
+                }
+                sessionStorage.cart = JSON.stringify(cart);
+            })
         });
- 
-         const getAllInstruments = async () => {
+        
+        const getAllInstruments = async () => {
             return await $.ajax({
                 url: "/Instruments/list",
                 success: function (instruments, status, xhr) {
                     return instruments;
                 },
-                error: function(xhr, status,err) {
+                error: function (xhr, status, err) {
                     console.log("fail");
                     return [];
                 }
@@ -148,7 +180,6 @@
                 instrumentCard.className = "instrumentCard col-xs-6 col-sm-4 col-md-3 col-lg-5ths";
                 var instrumentImg = document.createElement("img");
                 instrumentImg.className = "instrumentImage";
-                //console.log()
                 instrumentImg.setAttribute("src", '/Images/' + instrument.imagePath)
                 var instrumentName = document.createElement("div");
                 instrumentName.className = "instrumentName";
@@ -159,10 +190,15 @@
                 var instrumentPrice = document.createElement("div");
                 instrumentPrice.className = "instrumentPrice";
                 instrumentPrice.innerHTML = instrument.price;
+                var addToCartBtn = document.createElement("button");
+                addToCartBtn.className = "addToCartBtn";
+                addToCartBtn.setAttribute("instrumentId", instrument.id);
+                addToCartBtn.innerHTML = "add to cart";
                 instrumentCard.appendChild(instrumentImg);
                 instrumentCard.appendChild(instrumentName);
                 instrumentCard.appendChild(instrumentDescription);
                 instrumentCard.appendChild(instrumentPrice);
+                instrumentCard.appendChild(addToCartBtn);
                 $("#instrumentList").append(instrumentCard)
             }
         }
