--- a/musicly/Views/InstrumentOrders/Cart.cshtml
+++ b/musicly/Views/InstrumentOrders/Cart.cshtml
@@ -15,40 +15,71 @@
         text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
         background: #c0392b;
         border: 0;
-        border-radius:10px;
+        border-radius: 10px;
         border-bottom: 2px solid #b53224;
         cursor: pointer;
         -webkit-box-shadow: inset 0 -2px #b53224;
         box-shadow: inset 0 -2px #b53224;
     }
-
-    table{
-        text-align:right;
-    }
-    th{
-        text-align:right;
+    img{
+        height:40px;
+        width:60px;
     }
 
+    table {
+        text-align: right;
+    }
 
+    th {
+        text-align: right;
+    }
+
+    .instrumentCard {
+        width: 100%;
+        display: table-row;
+    }
 </style>
-
-<table class="table">
-    <thead class="thead-dark">
-        <tr>
-            <th scope="col">הסרה</th>
-            <th scope="col">סך הכל</th>
-            <th scope="col">מחיר ליחידה</th>
-            <th scope="col">כמות</th>
-            <th scope="col">שם המוצר</th>
-        </tr>
-    </thead>
-    <tbody id="cartItems">
-   
-    </tbody>
+<table>
+    <tr>
+        <td style="max-width: 25vw;padding-right: 4vw;vertical-align:top">
+            <h3>ההמלצות שלנו</h3>
+            <table style="text-align: center;width:100%;overflow-y:scroll;display: inline-block;font-size:18px;font-family:'Segoe UI';max-height:40vh">
+                <tbody id="recommendationList">
+                </tbody>
+            </table>
+        </td>
+        <td style="width: 55vw;">
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">הסרה</th>
+                        <th scope="col">סך הכל</th>
+                        <th scope="col">מחיר ליחידה</th>
+                        <th scope="col">כמות</th>
+                        <th scope="col">שם המוצר</th>
+                    </tr>
+                </thead>
+                <tbody id="cartItems">
+                </tbody>
+                <tbody>
+                    <tr>
+                        <td>
+                            <label id="totalCartPrice"></label>
+                            <label>:מחיר כולל</label>
+                            <br />
+                            <button id="completeOrder" class="btn btn-success">סיום הזמנה</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </td>
+    </tr>
+    
 </table>
-<label id="totalCartPrice"></label><label>:מחיר כולל</label>
-<br/>
-<button id="completeOrder" class="btn btn-success">סיום הזמנה</button>
+            
+
+            
+           
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
     $(document).ready(async () => {
@@ -58,6 +89,8 @@
         var allInstruments = await getAllInstruments();
         var cartDetails = [];
         var cart = JSON.parse(sessionStorage.cart);
+        var recommendations = JSON.parse(sessionStorage.recommendations);
+        renderRecommondations(recommendations);
         for (cartItem of cart) {
             for (instrument of allInstruments) {
                 if (cartItem.id == instrument.id) {
@@ -121,6 +154,29 @@
         })
     }
 
+    const renderRecommondations = (instruments) => {
+        for (instrument of instruments) {
+            var instrumentCard = document.createElement("tr");
+            instrumentCard.className = "instrumentCard";
+
+            var instrumentCell = document.createElement("td");
+            /*var instrumentImg = document.createElement("img");
+            instrumentImg.className = "instrumentImage";
+            instrumentImg.setAttribute("src", '/Images/' + instrument.imagePath)
+            instrumentCell.appendChild(instrumentImg);*/
+            var instrumentName = document.createElement("td");
+            instrumentName.className = "instrumentName";
+            instrumentName.innerHTML = instrument.name;
+            var instrumentPrice = document.createElement("td");
+            instrumentPrice.className = "instrumentPrice";
+            instrumentPrice.innerHTML =  "₪" + instrument.price;
+            instrumentCard.appendChild(instrumentPrice);
+            instrumentCard.appendChild(instrumentName);
+            instrumentCard.appendChild(instrumentCell);
+            $("#recommendationList").append(instrumentCard)
+        }
+    }
+
     const renderCartDetails = (cartDetails) => {
         for (cartItem of cartDetails) {
             var cartItemRow = document.createElement("tr");
@@ -138,7 +194,7 @@
             removeBtn.className = "removeBtn";
             removeBtn.setAttribute('instrumentId', cartItem.id);
             removeItem.appendChild(removeBtn);
-            
+
             cartItemRow.appendChild(removeItem);
             cartItemRow.appendChild(itemsTotalPrice);
             cartItemRow.appendChild(itemPrice);
@@ -157,7 +213,7 @@
     }
 
     const completeOrder = () => {
-        
+
     }
-    
+
 </script>
